# snowy

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix
docs/: DESIGN.md  PLAN.md
src/: main.rs
